fix: 🐛 allow scrollbar color to work in safari

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -124,3 +124,18 @@ html {
   scrollbar-gutter: stable;
   scrollbar-color: var(--color-base-200) var(--color-base-100);
 }
+
+html::-webkit-scrollbar {
+  width: 12px;
+  height: 12px;
+}
+
+html::-webkit-scrollbar-track {
+  background: var(--color-base-100);
+}
+
+html::-webkit-scrollbar-thumb {
+  background: var(--color-base-200);
+  border-radius: 6px;
+  border: 3px solid var(--color-base-100);
+}
